--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,17 @@
 # -- general -------------------------------------------------------------------
 
-set -g default-terminal "screen-256color" # colors!
+# colors
+set -g default-terminal "screen-256color"
+
+# status background
+set -g status-bg colour29
+# status foreground
+set -g status-fg white
+# active pane border color
+set-option -g pane-active-border-style fg=colour29
+# inactive pane border color
+set-option -g pane-border-style fg=colour239
+
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -s focus-events on
@@ -11,6 +22,7 @@ bind C-a send-prefix -2
 setw -q -g utf8 on
 
 set -g history-limit 5000                 # boost history
+
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
@@ -37,6 +49,9 @@ bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 set -g monitor-activity on
 set -g visual-activity off
 
+# mouse support
+set -g mouse on
+
 
 # -- navigation ----------------------------------------------------------------
 
@@ -53,10 +68,6 @@ bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
-
-# maximize current pane
-bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
-
 # pane resizing
 bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
