Config tmux statusbar, add aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,14 +3,19 @@
 # colors
 set -g default-terminal "screen-256color"
 
-# status background
+# status bar
+set -g status-left-length 128
+# status background color
 set -g status-bg colour29
-# status foreground
+# status foreground color
 set -g status-fg white
 # active pane border color
 set-option -g pane-active-border-style fg=colour29
 # inactive pane border color
 set-option -g pane-border-style fg=colour239
+# pane border info
+set -g pane-border-status bottom
+set -g pane-border-format "#{pane_index} #{pane_current_path} #{pane_current_command}"
 
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
@@ -21,7 +26,7 @@ bind C-a send-prefix -2
 
 setw -q -g utf8 on
 
-set -g history-limit 5000                 # boost history
+set -g history-limit 500000                 # boost history
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
