copy mode for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,7 @@ set -g display-time 1000      # slightly longer status messages display time
 set -g status-interval 10     # redraw status line every 10 seconds
 
 # clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
+bind -n C-d send-keys C-l \; run 'sleep 0.1' \; clear-history
 
 # activity
 set -g monitor-activity on
@@ -57,11 +57,13 @@ set -g visual-activity off
 # mouse support
 set -g mouse on
 
+# copy mode
+setw -g mode-keys vi
 
 # -- navigation ----------------------------------------------------------------
 
 # create session
-bind C-c new-session
+bind C-s command-prompt -p new-session-name 'new -s %%'
 
 # find session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
@@ -73,6 +75,7 @@ bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
+
 # pane resizing
 bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
@@ -82,7 +85,5 @@ bind -r L resize-pane -R 2
 # window navigation
 unbind n
 unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
 bind Tab last-window        # move to last active window
 
