--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,6 +82,11 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
+# new pane in same window
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # window navigation
 unbind n
 unbind p
