--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,7 @@ set -g display-time 1000      # slightly longer status messages display time
 set -g status-interval 10     # redraw status line every 10 seconds
 
 # clear both screen and history
-bind -n C-d send-keys C-l \; run 'sleep 0.1' \; clear-history
+bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 
 # activity
 set -g monitor-activity on
@@ -56,9 +56,6 @@ set -g visual-activity off
 
 # mouse support
 set -g mouse on
-
-# copy mode
-setw -g mode-keys vi
 
 # -- navigation ----------------------------------------------------------------
 
@@ -92,3 +89,13 @@ unbind n
 unbind p
 bind Tab last-window        # move to last active window
 
+# -- search & copy/paste ------------------------------------------------------
+
+# copy mode
+setw -g mode-keys vi
+
+# don't jump to the end after copy
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# use system buffer with xclip
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
